pkg/provider/kubernetes/gateway/fixtures/httproute/with_session_persistence.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: my-gateway-class
  namespace: default
spec:
  controllerName: traefik.io/gateway-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - name: web
      protocol: HTTP
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-sticky
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: web
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - foo.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /sticky
      sessionPersistence:
        sessionName: SERVERID
        cookieConfig:
          lifetimeType: Permanent
        absoluteTimeout: 3600s
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
